syntax = "proto3";

package keybroker;

message RequestDetails {
    string Guid = 1;
    string Format = 2;
    string SecretType = 3;
    string Id = 4;
}

message OnlineSecretRequest {
    string ClientId = 1;
    repeated RequestDetails SecretRequests = 2;
}

message OnlineSecretResponse {
    string Payload = 1;
    string IV = 2;
}

service KeyBrokerService {
    rpc GetOnlineSecret(OnlineSecretRequest) returns (OnlineSecretResponse) {};
}
